post order by date, stop socials squashing, favicon

--- a/components/content/content.module.css
+++ b/components/content/content.module.css
@@ -80,7 +80,7 @@
 
 .socialBanner {
   display: flex;
-  width: 30%;
+  width: 100%;
   margin: auto;
   justify-content: center;
 }
